objects/Field_Capacity_Transfer__c.object
<CustomObject>
    <fields>
        <fullName>Capacity_Hours__c</fullName>
        <label>Capacity (Hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_Capacity_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Field Capacity Record</label>
        <referenceTo>Field_Capacity__c</referenceTo>
        <relationshipLabel>Field Capacity Transfers</relationshipLabel>
        <relationshipName>Field_Capacity_Transfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transfer_Date__c</fullName>
        <label>Transfer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transfer_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transfer From</label>
        <referenceTo>ServiceTerritory</referenceTo>
        <relationshipLabel>Field Capacity Transfers (Transfer From)</relationshipLabel>
        <relationshipName>Field_Capacity_Transfers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transfer_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transfer To</label>
        <referenceTo>ServiceTerritory</referenceTo>
        <relationshipLabel>Field Capacity Transfers</relationshipLabel>
        <relationshipName>Field_Capacity_Transfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Field Capacity Transfer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Transfer_Date__c</columns>
        <columns>Capacity_Hours__c</columns>
        <columns>Transfer_From__c</columns>
        <columns>Transfer_To__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Field Capacity Transfer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Capacity Transfers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>